@@ -1,13 +1,10 @@
 package com.dotcms.rest.api.v2.languages;
 
-import static com.dotcms.rest.ResponseEntityView.OK;
-import static com.dotmarketing.util.UtilMethods.isNotSet;
-import static com.dotmarketing.util.WebKeys.*;
-
 import com.dotcms.keyvalue.model.KeyValue;
+import com.dotcms.languagevariable.business.LanguageVariable;
+import com.dotcms.languagevariable.business.LanguageVariableAPI;
 import com.dotcms.rendering.velocity.viewtools.util.ConversionUtils;
 import com.dotcms.repackage.com.google.common.annotations.VisibleForTesting;
-import com.dotcms.repackage.com.google.common.collect.Maps;
 import com.dotcms.rest.AnonymousAccess;
 import com.dotcms.rest.InitDataObject;
 import com.dotcms.rest.MessageEntity;
@@ -16,8 +13,6 @@ import com.dotcms.rest.WebResource;
 import com.dotcms.rest.annotation.InitRequestRequired;
 import com.dotcms.rest.annotation.NoCache;
 import com.dotcms.rest.api.v1.I18NForm;
-import com.dotcms.rest.api.v1.languages.LanguageTransform;
-import com.dotcms.rest.api.v1.languages.RestLanguage;
 import com.dotcms.util.DotPreconditions;
 import com.dotcms.util.I18NUtil;
 import com.dotmarketing.business.APILocator;
@@ -35,23 +30,20 @@ import com.dotmarketing.util.Logger;
 import com.dotmarketing.util.PortletID;
 import com.dotmarketing.util.StringUtils;
 import com.dotmarketing.util.UtilMethods;
-import com.google.common.collect.ImmutableList;
 import com.liferay.portal.language.LanguageUtil;
 import com.liferay.portal.model.User;
 import com.rainerhahnekamp.sneakythrow.Sneaky;
+import io.vavr.Tuple2;
 import io.vavr.control.Try;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import org.apache.commons.beanutils.BeanUtils;
+import org.glassfish.jersey.server.JSONP;
+
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.validation.constraints.NotNull;
+import javax.ws.rs.BeanParam;
 import javax.ws.rs.DELETE;
+import javax.ws.rs.DefaultValue;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
@@ -63,29 +55,49 @@ import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
-import org.apache.commons.beanutils.BeanUtils;
-import org.glassfish.jersey.server.JSONP;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.TreeMap;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+import static com.dotcms.rest.ResponseEntityView.OK;
+import static com.dotmarketing.portlets.languagesmanager.business.LanguageAPI.isLocalizationEnhancementsEnabled;
+import static com.dotmarketing.util.WebKeys.CONTENT_SELECTED_LANGUAGE;
+import static com.dotmarketing.util.WebKeys.HTMLPAGE_LANGUAGE;
+import static com.dotmarketing.util.WebKeys.LANGUAGE_SEARCHED;
 
 /**
- * Language end point
+ * Language endpoint for the v2 API
  */
 @Path("/v2/languages")
 public class LanguagesResource {
 
     private final LanguageAPI languageAPI;
+
+    private final LanguageVariableAPI languageVariableAPI;
+
     private final WebResource webResource;
     private final com.dotcms.rest.api.v1.languages.LanguagesResource oldLanguagesResource;
 
     public LanguagesResource() {
         this(APILocator.getLanguageAPI(),
-                new WebResource(new ApiProvider()));
+             APILocator.getLanguageVariableAPI(),
+             new WebResource(new ApiProvider())
+        );
     }
 
     @VisibleForTesting
     public LanguagesResource(final LanguageAPI languageAPI,
-                                final WebResource webResource) {
+                             final LanguageVariableAPI languageVariableAPI,
+                             final WebResource webResource) {
 
         this.languageAPI  = languageAPI;
+        this.languageVariableAPI = languageVariableAPI;
         this.webResource  = webResource;
         this.oldLanguagesResource = new com.dotcms.rest.api.v1.languages.LanguagesResource(languageAPI, webResource, I18NUtil.INSTANCE);
     }
@@ -114,7 +126,7 @@ public class LanguagesResource {
             throw new DoesNotExistException("The language id = " + languageId + " does not exists");
         }
 
-        return Response.ok(new ResponseEntityView(new LanguageView(language))).build();
+        return Response.ok(new ResponseEntityView<>(new LanguageView(language, ()->isDefault(language)))).build();
     }
 
     @GET
@@ -122,9 +134,12 @@ public class LanguagesResource {
     @NoCache
     @Produces({MediaType.APPLICATION_JSON})
     /**
-     * return a array with all the languages
+     * return an array with all the languages
      */
-    public Response  list(@Context final HttpServletRequest request, @Context final HttpServletResponse response, @QueryParam("contentInode") final String contentInode)
+    public Response list(@Context final HttpServletRequest request, @Context final HttpServletResponse response,
+            @QueryParam("contentInode") final String contentInode,
+             @QueryParam("countLangVars") final boolean countLangVars
+    )
             throws DotDataException, DotSecurityException {
 
         Logger.debug(this, () -> String.format("listing languages %s", request.getRequestURI()));
@@ -135,7 +150,15 @@ public class LanguagesResource {
         final List<Language> languages = contentInode != null ?
                 languageAPI.getAvailableContentLanguages(contentInode, user) :
                 languageAPI.getLanguages();
-
+        if (countLangVars){
+            //We calculate the total number of language variables once as this value is the same for all languages
+            final int total = languageVariableAPI.countVariablesByKey();
+            return Response.ok(
+                    new ResponseEntityView<>(languages.stream()
+                            .map(language -> withLangVarCounts(language, total))
+                            .collect(Collectors.toList())))
+                    .build();
+        }
         return Response.ok(
                 new ResponseEntityView<>(languages.stream()
                         .map(instanceLanguageView())
@@ -143,10 +166,30 @@ public class LanguagesResource {
                 .build();
     }
 
-    public Function<Language, LanguageView> instanceLanguageView() {
-        return LanguageView::new;
+    @VisibleForTesting
+    boolean isDefault(final Language language){
+        return language.getId() == languageAPI.getDefaultLanguage().getId();
     }
 
+    /**
+     * Returns a {@link LanguageView} with the total number of language variables and the number of language variables
+     * @param language {@link Language}
+     * @return {@link LanguageView}
+     */
+   LanguageView withLangVarCounts(final Language language, final int total){
+       final int langCount = languageVariableAPI.countVariablesByKey(language.getId());
+       return new LanguageView(language, ()->isDefault(language), ()->ImmutableLangVarsCount.builder().total(total).count(langCount).build());
+    }
+
+    public Function<Language, LanguageView> instanceLanguageView() {
+       return language -> new LanguageView(language, ()->isDefault(language));
+    }
+
+    /**
+     * Validates if the language exists in the system
+     * @param languageForm LanguageForm
+     * @return Language
+     */
     private Language validateLanguageExists(final LanguageForm languageForm) {
         DotPreconditions.checkArgument(UtilMethods.isSet(languageForm.getLanguageCode())
                         || UtilMethods.isSet(languageForm.getIsoCode()),
@@ -180,10 +223,11 @@ public class LanguagesResource {
         DotPreconditions.notNull(languageForm,"Expected Request body was empty.");
         final Language language = validateLanguageExists(languageForm);
         if(null != language && language != LanguageCacheImpl.LANG_404){
-            return Response.ok(new ResponseEntityView(language, ImmutableList.of(new MessageEntity("Language already exists.")))).build(); // 200
+            return Response.ok(new ResponseEntityView<>(language, List.of(new MessageEntity("Language already exists.")))).build(); // 200
         }
+        final Language savedOrUpdateLanguage = saveOrUpdateLanguage(null, languageForm);
         return Response.ok(new ResponseEntityView<>(
-                new LanguageView(saveOrUpdateLanguage(null, languageForm))
+                new LanguageView(savedOrUpdateLanguage,()->isDefault(savedOrUpdateLanguage) )
         )).build(); // 200
     }
 
@@ -194,25 +238,58 @@ public class LanguagesResource {
     @Produces({MediaType.APPLICATION_JSON, "application/javascript"})
     public final Response saveFromLanguageTag(@Context final HttpServletRequest request,
             @Context final HttpServletResponse response,
-            @PathParam("languageTag") final String languageTag
-    ) throws AlreadyExistException {
+            @PathParam("languageTag") final String languageTag,
+            @DefaultValue("false") @QueryParam("strict") final boolean strict) throws AlreadyExistException {
         DotPreconditions.notNull(languageTag, "Expected languageTag Param path was empty.");
         this.webResource.init(null, request, response,
                 true, PortletID.LANGUAGES.toString());
 
-        final Locale locale = validateLanguageTag(languageTag);
-
-        final LanguageForm languageForm = new LanguageForm.Builder()
-                .language(locale.getDisplayLanguage()).languageCode(locale.getLanguage())
-                .country(locale.getDisplayCountry()).countryCode(locale.getCountry()).build();
+        final LanguageForm languageForm = this.getLanguageData(languageTag, strict);
 
         final Language language = validateLanguageExists(languageForm);
         if(null != language && language != LanguageCacheImpl.LANG_404){
-           return Response.ok(new ResponseEntityView(language, ImmutableList.of(new MessageEntity("Language already exists.")))).build(); // 200
+           return Response.ok(new ResponseEntityView<>(language, List.of(new MessageEntity("Language already exists.")))).build(); // 200
         }
+        final Language saveOrUpdateLanguage = saveOrUpdateLanguage(null, languageForm);
         return Response.ok(new ResponseEntityView<>(
-                new LanguageView(saveOrUpdateLanguage(null, languageForm))
+                new LanguageView(saveOrUpdateLanguage,()->isDefault(saveOrUpdateLanguage))
         )).build(); // 200
+    }
+
+    /**
+     * Takes the incoming Language Tag and creates a {@link LanguageForm} object with it. It's worth
+     * noting that the languageTag can be in the format of a valid Locale, or any other format
+     * specified by the User.
+     *
+     * @param languageTag The Language Tag that is being transformed into a {@link LanguageForm}
+     *                    object.
+     * @param strict      If the Language Tag must be checked against a valid Locale, set this to
+     *                    {@code true}. If invalid Locales must be supported, set this to
+     *                    {@code false}.
+     *
+     * @return The {@link LanguageForm} object created from the Language Tag.
+     */
+    private LanguageForm getLanguageData(final String languageTag, final boolean strict) {
+        final LanguageForm.Builder languageFormBuilder = new LanguageForm.Builder();
+        Locale locale;
+        if (strict) {
+            locale = this.validateLanguageTag(languageTag);
+            languageFormBuilder.language(locale.getDisplayLanguage()).languageCode(locale.getLanguage())
+                    .country(locale.getDisplayCountry()).countryCode(locale.getCountry());
+            return languageFormBuilder.build();
+        }
+        locale = Locale.forLanguageTag(languageTag);
+        if (UtilMethods.isNotSet(locale.toString())) {
+            Logger.warn(this, String.format("Language Tag '%s' " +
+                    "may not be a valid Locale. Creating Language with available information", languageTag));
+            final Tuple2<String, String> extractedCodes = LanguageUtil.getLanguageCountryCodes(languageTag);
+            languageFormBuilder.language(extractedCodes._1).languageCode(extractedCodes._1)
+                    .countryCode(extractedCodes._2);
+        } else {
+            languageFormBuilder.language(locale.getDisplayLanguage()).languageCode(locale.getLanguage())
+                    .country(locale.getDisplayCountry()).countryCode(locale.getCountry());
+        }
+        return languageFormBuilder.build();
     }
 
 
@@ -224,32 +301,20 @@ public class LanguagesResource {
     public Response getFromLanguageTag (
             @Context final HttpServletRequest request,
             @Context final HttpServletResponse response,
-            @PathParam("languageTag") final String languageTag) {
-
-
-        final Locale locale = validateLanguageTag(languageTag);
-        final LanguageForm languageForm = new LanguageForm.Builder()
-                .language(locale.getDisplayLanguage()).languageCode(locale.getLanguage())
-                .country(locale.getDisplayCountry()).countryCode(locale.getCountry()).build();
-
+            @PathParam("languageTag") final String languageTag,
+            @DefaultValue("false") @QueryParam("strict") final boolean strict) {
+        final LanguageForm languageForm = this.getLanguageData(languageTag, strict);
         DotPreconditions.notNull(languageTag, "Expected languageTag Param path was empty.");
         final Language language = getLanguage(languageForm);
         if(null == language){
            return Response.status(Status.NOT_FOUND).build();
         }
 
-        return Response.ok(new ResponseEntityView(new LanguageView(language))).build();
+        return Response.ok(new ResponseEntityView<>(new LanguageView(language,()->isDefault(language) ))).build();
     }
 
     private Locale validateLanguageTag(final String languageTag)throws DoesNotExistException {
-        final Locale locale = Locale.forLanguageTag(languageTag);
-        final boolean validCountry = (isNotSet(locale.getCountry()) || Stream.of(Locale.getISOCountries()).collect(Collectors.toSet()).contains(locale.getCountry()));
-        final boolean validLang = Stream.of(Locale.getISOLanguages()).collect(Collectors.toSet()).contains(locale.getLanguage());
-        if(validLang && validCountry) {
-            return locale;
-        } else {
-           throw new DoesNotExistException(String.format(" `%s` is an invalid language tag ", languageTag));
-        }
+        return LanguageUtil.validateLanguageTag(languageTag);
     }
 
     /**
@@ -283,7 +348,7 @@ public class LanguagesResource {
         DotPreconditions.notNull(languageForm,"Expected Request body was empty.");
         final Language language = saveOrUpdateLanguage(languageId, languageForm);
         return Response.ok(new ResponseEntityView<>(
-                new LanguageView(language)
+                new LanguageView(language, ()->isDefault(language))
         )).build(); // 200
     }
 
@@ -308,7 +373,7 @@ public class LanguagesResource {
         DotPreconditions.isTrue(doesLanguageExist(languageId), DoesNotExistException.class, ()->"Language not found");
         final Language language = languageAPI.getLanguage(languageId);
         languageAPI.deleteLanguage(language);
-        return Response.ok(new ResponseEntityView(OK)).build(); // 200
+        return Response.ok(new ResponseEntityView<>(OK)).build(); // 200
     }
 
     @POST
@@ -355,10 +420,6 @@ public class LanguagesResource {
     }
     
     
-    
-    
-    
-    
     /**
      * Gets all the Messages from the language passed.
      * If default is passed it will get the messages for the default language.
@@ -376,7 +437,7 @@ public class LanguagesResource {
     public Response getAllMessages (
             @Context final HttpServletRequest request,
             @Context final HttpServletResponse response,
-            @PathParam("language") final String language){
+            @PathParam("language") final String language) throws DotDataException {
 
         final InitDataObject initData = new WebResource.InitBuilder(request, response)
                 .requiredAnonAccess(AnonymousAccess.READ)
@@ -387,35 +448,84 @@ public class LanguagesResource {
         final Locale currentLocale=resolveAdminLocale(language);
         
         //Messages in the properties file
-        final Map mapPropertiesFile = LanguageUtil.getAllMessagesByLocale(currentLocale);
+        //These are the resources that are in the properties file added by developers to dotCMS so will always need this
+        final Map<?,?> mapPropertiesFile = LanguageUtil.getAllMessagesByLocale(currentLocale);
 
-        final Map result = new TreeMap(mapPropertiesFile);
+        final Map<Object,Object> result = new TreeMap<>(mapPropertiesFile);
 
-        final Language language1 = APILocator.getLanguageAPI().getLanguage(currentLocale.getLanguage(),currentLocale.getCountry());
+        final Language language1 = languageAPI.getLanguage(currentLocale.getLanguage(),currentLocale.getCountry());
         if(UtilMethods.isSet(language1)) {
-            //Language Keys
-            final Map mapLanguageKeys = APILocator.getLanguageAPI()
-                    .getLanguageKeys(currentLocale.getLanguage()).stream().collect(
-                            Collectors.toMap(LanguageKey::getKey, LanguageKey::getValue));
 
-            result.putAll(mapLanguageKeys);
+            if(isLocalizationEnhancementsEnabled()) {
+                final Language matchingLang = languageAPI.getLanguage(currentLocale.getLanguage(),currentLocale.getCountry());
+                // Enhanced Language Vars
+                final List<LanguageVariable> variables = languageVariableAPI.findVariables(matchingLang.getId());
+                final Map<?,?> map = variables.stream().collect(
+                        Collectors.toMap(LanguageVariable::key, LanguageVariable::value, (value1,value2) ->{
+                            //Merge function is always a good idea to have.
+                            //There can be cases on which the "unique" constraint of the key is lifted allowing for duplicates
+                            Logger.warn(this.getClass(),"Duplicate language variable found using latest value: " + value1);
+                            return value1;
+                        }));
+                result.putAll(map);
+            } else {
+                //Language Keys
+                final Map <?,?> mapLanguageKeys = languageAPI
+                        .getLanguageKeys(currentLocale.getLanguage()).stream().collect(
+                                Collectors.toMap(LanguageKey::getKey, LanguageKey::getValue));
 
-            //Language Variable
-            long langId = language1.getId();
-            final Map mapLanguageVariables = Try.of(()->APILocator.getLanguageVariableAPI().getAllLanguageVariablesKeyStartsWith("", langId,
-                    user, -1)).getOrElse(ArrayList::new).stream().collect(Collectors.toMap(
-                    KeyValue::getKey,KeyValue::getValue, (value1,value2) ->{
-                        Logger.warn(this.getClass(),"Duplicate language variable found using latest value: " + value1);
-                        return value1;
-                    }));
+                result.putAll(mapLanguageKeys);
 
-            result.putAll(mapLanguageVariables);
+                //Legacy Language Variable
+                long langId = language1.getId();
+                final Map mapLanguageVariables = Try.of(()->APILocator.getLanguageVariableAPI().getAllLanguageVariablesKeyStartsWith("", langId,
+                        user, -1)).getOrElse(ArrayList::new).stream().collect(Collectors.toMap(
+                        KeyValue::getKey,KeyValue::getValue, (value1,value2) ->{
+                            Logger.warn(this.getClass(),"Duplicate language variable found using latest value: " + value1);
+                            return value1;
+                        }));
+                result.putAll(mapLanguageVariables);
+            }
 
         }
 
 
-        return Response.ok(new ResponseEntityView(result)).build();
+        return Response.ok(new ResponseEntityView<>(result)).build();
     }
+
+    /**
+     * Gets all the language variables in the system organized by key
+     * @param request {@link HttpServletRequest}
+     * @param response {@link HttpServletResponse}
+     * @param renderNulls boolean
+     * @param paginationContext {@link PaginationContext}
+     * @return all the messages of the language
+     * @throws DotDataException if an error occurs
+     */
+    @GET
+    @Path("/variables")
+    @JSONP
+    @NoCache
+    @Produces({MediaType.APPLICATION_JSON, "application/javascript"})
+    public Response getVariables(
+            @Context final HttpServletRequest request,
+            @Context final HttpServletResponse response,
+            @QueryParam("renderNulls") @DefaultValue("true") final boolean renderNulls,
+            @BeanParam final PaginationContext paginationContext) throws DotDataException {
+
+                new WebResource.InitBuilder(webResource)
+                        .requiredBackendUser(true)
+                        .requiredFrontendUser(true)
+                        .requiredPortlet(PortletID.LANGUAGES.toString())
+                        .requestAndResponse(request, response)
+                        .rejectWhenNoUser(true)
+                        .init();
+
+        final LanguageVariablePageView view = new LanguageVariablesHelper()
+                .view(paginationContext, renderNulls);
+        return Response.ok(new ResponseEntityView<>(view)).build();
+    }
+
 
     private Language saveOrUpdateLanguage(final String languageId, final LanguageForm form)
             throws AlreadyExistException {
@@ -497,7 +607,34 @@ public class LanguagesResource {
         httpServletRequest.getSession().removeAttribute(HTMLPAGE_LANGUAGE);
         httpServletRequest.getSession().removeAttribute(CONTENT_SELECTED_LANGUAGE);
         return Response.ok(new ResponseEntityView<>(
-                new LanguageView(newDefault)
+                new LanguageView(newDefault, ()->isDefault(newDefault))
         )).build(); // 200
     }
+
+    @GET
+    @Path("/iso")
+    @JSONP
+    @NoCache
+    @Produces({MediaType.APPLICATION_JSON, "application/javascript"})
+    public Response getIsoLanguagesAndCountries (
+            @Context final HttpServletRequest request,
+            @Context final HttpServletResponse response)  {
+
+        final List<Map<String, String>> languages = Arrays.stream(Locale.getISOLanguages())
+                .map(code -> Map.of("code", code, "name", new Locale(code).getDisplayLanguage()))
+                .sorted(Comparator.comparing(o -> o.get("name")))
+                .collect(Collectors.toList());
+
+        final List<Map<String, String>> countries = Arrays.stream(Locale.getISOCountries())
+                .map(code -> Map.of("code", code, "name", new Locale("", code).getDisplayCountry()))
+                .sorted(Comparator.comparing(o -> o.get("name")))
+                .collect(Collectors.toList());
+
+        return Response.ok(new ResponseEntityView<>(Map.of(
+                 "languages", languages,
+                 "countries", countries)
+               )
+        ).build();
+    }
+
 }
